Fixed overflow issue

--- a/src/styles/components/page.sass
+++ b/src/styles/components/page.sass
@@ -9,6 +9,7 @@
   height: 100%
   width: 100%
   z-index: $z-page
+  overflow: hidden;
   .page_wrapper
     height: 100%
     clip-path: polygon(calc(100% - 80px) 0, 100% 80px, 100% 100%, 0 100%, 0 0)
